# codexOS

./: .gitignore  Cargo.toml  Makefile  README.md  grub.cfg  i686-codex_os.json  linker.ld  stage1.ld  stage2.ld
.cargo/: config.toml
src/: allocator.rs  ata.rs  beep.rs  boot.rs  bootinfo.rs  elf.rs  fs.rs  gdt.rs  idt.rs  input.rs  interrupts.rs  io.rs  keyboard.rs  main.rs  matrix.rs  mouse.rs  paging.rs  pci.rs  pic.rs  reboot.rs  rtc.rs  serial.rs  shell.rs  shutdown.rs  sync.rs  task.rs  timer.rs  ui.rs  vga.rs
src/discord/: mod.rs
src/net/: mod.rs  ne2k.rs
src/shell/: demos.rs  editor.rs  mod.rs
src/shell/commands/: mod.rs  storage.rs  system.rs
src/ui/: dispatcher.rs  mod.rs  widgets.rs  window.rs
tools/: discord_bridge.py  inject_cfs.py
userspace/: hello_user.S  stress_user.S
